--- a/app/assets/stylesheets/picasa.css.scss
+++ b/app/assets/stylesheets/picasa.css.scss
@@ -1,32 +1,33 @@
 body{
   background-color: #DEC79C;
-
 }
+
 .button {
   text-align: center; 
   position:relative;
-  margin-right: auto;
-  margin-left:auto;
-  margin-top: 100%;
-  margin-bottom: 100%;
-
+  margin: auto;
   width: 10%;
-  font-family: Arial;
+  font: 18px 'Arial';
   color: #ffffff;
-  font-size: 18px;
   padding: 10px;
   text-decoration: none;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
-  -webkit-box-shadow: 0px 1px 3px #666666;
-  -moz-box-shadow: 0px 1px 3px #666666;
-  box-shadow: 0px 1px 3px  #666666;
+  -webkit-box-shadow: 0px 2px 3px #666666;
+  -moz-box-shadow: 0px 2px 3px #666666;
+  box-shadow: 0px 2px 3px  #666666;
   text-shadow: 0px 1px 3px  #666666;
   border: solid #ffffff 2px;
   background: -webkit-gradient(linear, 0 0, 0 100%, from(  #999999  ), to(   #999999 ));
   background: -moz-linear-gradient(top,    #999999 ,    #999999 );
+  a:link {
+    color:#ffffff;
+    text-decoration:none;
+  } 
+  a:visited {color:#ffffff;}
 }
+
 .button:hover {
   background:#808080;
 }
