--- a/app/assets/stylesheets/picasa.css.scss
+++ b/app/assets/stylesheets/picasa.css.scss
@@ -31,3 +31,12 @@ body{
 .button:hover {
   background:#808080;
 }
+
+.rotation {
+  display:inline-block;
+  margin: 20px;
+  -moz-transform:rotate(-10deg);
+  -webkit-transform:rotate(-10deg);
+  -o-transform:rotate(-10deg);
+  -ms-transform:rotate(-10deg);
+}
