--- a/app/assets/stylesheets/picasa.css.scss
+++ b/app/assets/stylesheets/picasa.css.scss
@@ -25,7 +25,7 @@ body{
     color:#ffffff;
     text-decoration:none;
   } 
-  a:visited {color:#ffffff;}
+  a:visited { color:#ffffff; }
 }
 
 .button:hover {
@@ -35,8 +35,28 @@ body{
 .rotation {
   display:inline-block;
   margin: 20px;
-  -moz-transform:rotate(-10deg);
-  -webkit-transform:rotate(-10deg);
-  -o-transform:rotate(-10deg);
-  -ms-transform:rotate(-10deg);
+  -moz-transform:rotate(-5deg);
+  -webkit-transform:rotate(-5deg);
+  -o-transform:rotate(-5deg);
+  -ms-transform:rotate(-5deg);
+}
+
+.polaroid {
+  width: 184px;
+  height: 209px;
+  background-color: #ffffff;
+  padding-top: 10px ;
+  text-decoration: none;
+  color: black;
+  text-align: center;
+  -webkit-transition: -webkit-transform .15s linear;
+  -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25);
+  -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25);
+  a:link {
+    text-decoration: none;   
+  }
+  a:visited {
+    color: black;
+    text-decoration: none;   
+  }
 }
