--- a/app/assets/stylesheets/picasa.css.scss
+++ b/app/assets/stylesheets/picasa.css.scss
@@ -32,15 +32,6 @@ body{
   background:#808080;
 }
 
-.rotation {
-  display:inline-block;
-  margin: 20px;
-  -moz-transform:rotate(-5deg);
-  -webkit-transform:rotate(-5deg);
-  -o-transform:rotate(-5deg);
-  -ms-transform:rotate(-5deg);
-}
-
 .polaroid {
   width: 184px;
   height: 209px;
@@ -53,10 +44,26 @@ body{
   -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25);
   -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25);
   a:link {
-    text-decoration: none;   
-  }
+    text-decoration: none; 
+  } 
+  .rotation {
+    display:inline-block;
+    margin: 20px;
+    -moz-transform:rotate(-5deg);
+    -webkit-transform:rotate(-5deg);
+    -o-transform:rotate(-5deg);
+    -ms-transform:rotate(-5deg);
+  }   
   a:visited {
     color: black;
     text-decoration: none;   
   }
 }
+  
+.empty_album {
+  display: inline-block;
+  width: 160px;
+  height: 160px;
+  background-color: #000000;
+}
+
