set rotation for existing albums

--- a/app/assets/stylesheets/picasa.css.scss
+++ b/app/assets/stylesheets/picasa.css.scss
@@ -53,6 +53,13 @@ body{
   }
 }
 
+.rotation:hover {
+  -webkit-transform: scale(1.15);
+  -moz-transform: scale(1.15);
+  position: relative;
+  z-index: 5;  
+}
+
 .rotation {
   display:inline-block;
   margin: 20px;
