--- a/app/assets/stylesheets/picasa.css.scss
+++ b/app/assets/stylesheets/picasa.css.scss
@@ -1,5 +1,11 @@
-body{
+body {
+  font-family: "helvetica neue",arial,sans-serif;
   background-color: #DEC79C;
+}
+
+h1 {
+  color: #423029;
+ /* color: #62412e;*/
 }
 
 .button {
@@ -25,7 +31,7 @@ body{
     color:#ffffff;
     text-decoration:none;
   } 
-  a:visited { color:#ffffff; }
+  a:visited { color: #ffffff; }
 }
 
 .button:hover {
@@ -37,7 +43,8 @@ body{
   height: 209px;
   background-color: #ffffff;
   padding-top: 10px ;
-  text-decoration: none;
+  font: 14px 'Arial';
+  font-weight: bold;
   color: black;
   text-align: center;
   -webkit-transition: -webkit-transform .15s linear;
@@ -49,7 +56,6 @@ body{
     
   a:visited {
     color: black;
-    text-decoration: none;   
   }
 }
 
