--- a/app/assets/stylesheets/picasa.css.scss
+++ b/app/assets/stylesheets/picasa.css.scss
@@ -17,25 +17,20 @@ h1 {
   color: #ffffff;
   padding: 10px;
   text-decoration: none;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-  -webkit-box-shadow: 0px 2px 3px #666666;
-  -moz-box-shadow: 0px 2px 3px #666666;
-  box-shadow: 0px 2px 3px  #666666;
-  text-shadow: 0px 1px 3px  #666666;
+  @include border-radius(10px); 
+  @include box-shadow(0px 2px 3px #666666);
+  @include text-shadow(0px 1px 3px  #666666);
   border: solid #ffffff 2px;
-  background: -webkit-gradient(linear, 0 0, 0 100%, from(  #999999  ), to(   #999999 ));
-  background: -moz-linear-gradient(top,    #999999 ,    #999999 );
+  @include background(linear-gradient(top, #999999, #999999));
   a:link {
-    color:#ffffff;
+    color: #ffffff;
     text-decoration:none;
   } 
   a:visited { color: #ffffff; }
-}
 
-.button:hover {
-  background:#808080;
+  &:hover {
+    background: #808080;
+  }
 }
 
 .polaroid {
@@ -47,33 +42,25 @@ h1 {
   font-weight: bold;
   color: black;
   text-align: center;
-  -webkit-transition: -webkit-transform .15s linear;
-  -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25);
-  -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25);
+  @include box-shadow(0 3px 6px rgba(0,0,0,.25));
   a:link {
     text-decoration: none; 
-  } 
-    
+  }    
   a:visited {
     color: black;
   }
 }
 
-.rotation:hover {
-  -webkit-transform: scale(1.15);
-  -moz-transform: scale(1.15);
-  position: relative;
-  z-index: 5;  
-}
-
 .rotation {
   display:inline-block;
   margin: 20px;
-  -moz-transform:rotate(-5deg);
-  -webkit-transform:rotate(-5deg);
-  -o-transform:rotate(-5deg);
-  -ms-transform:rotate(-5deg);
-} 
+  @include rotate(-5deg);
+  @include transition(all, 0.5s, linear);
+  &:hover {
+    @include scale(1.15);
+    position: relative;
+  }
+}
   
 .empty_album {
   display: inline-block;
@@ -81,4 +68,3 @@ h1 {
   height: 160px;
   background-color: #000000;
 }
-
