--- a/app/assets/stylesheets/picasa.css.scss
+++ b/app/assets/stylesheets/picasa.css.scss
@@ -1,10 +1,12 @@
+@import 'colors';
+
 body {
-  font-family: "helvetica neue",arial,sans-serif;
-  background-color: #DEC79C;
+  font-family: "helvetica neue", arial, sans-serif;
+  background-color: $background;
 }
 
 h1 {
-  color: #423029;
+  color: $h1-color;
  /* color: #62412e;*/
 }
 
@@ -14,41 +16,34 @@ h1 {
   margin: auto;
   width: 10%;
   font: 18px 'Arial';
-  color: #ffffff;
+  color: white;
   padding: 10px;
   text-decoration: none;
   @include border-radius(10px); 
-  @include box-shadow(0px 2px 3px #666666);
-  @include text-shadow(0px 1px 3px  #666666);
-  border: solid #ffffff 2px;
-  @include background(linear-gradient(top, #999999, #999999));
+  @include box-shadow(0px 2px 3px $shadow);
+  @include text-shadow(0px 1px 3px  $shadow);
+  border: solid white 2px;
+  @include background(linear-gradient(top, $gray, $gray));
   a:link {
-    color: #ffffff;
-    text-decoration:none;
+    color: white;
+    text-decoration :none;
   } 
-  a:visited { color: #ffffff; }
-
-  &:hover {
-    background: #808080;
-  }
+  a:visited { color: white; }
+  &:hover { background: $gray-hover; }
 }
 
 .polaroid {
   width: 184px;
   height: 209px;
-  background-color: #ffffff;
+  background-color: white;
   padding-top: 10px;
   font: 14px 'Arial';
   font-weight: bold;
   color: black;
   text-align: center;
   @include box-shadow(0 3px 6px rgba(0,0,0,.25));
-  a:link {
-    text-decoration: none; 
-  }    
-  a:visited {
-    color: black;
-  }
+  a:link { text-decoration: none; }    
+  a:visited { color: black; }
 }
 
 .rotation {
@@ -66,5 +61,5 @@ h1 {
   display: inline-block;
   width: 160px;
   height: 160px;
-  background-color: #000000;
+  background-color: black;
 }
