--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,4 +17,8 @@
  @import "compass/css3/images";
  @import "compass/css3/transform";
  @import "compass/css3/transition";
+ @import "compass/css3/shared";
+ @import 'colors';
  @import "picasa";
+ 
+ 
