--- a/app/assets/stylesheets/picasa.css.scss
+++ b/app/assets/stylesheets/picasa.css.scss
@@ -1,24 +1,28 @@
-@import 'colors';
-
 body {
   font-family: "helvetica neue", arial, sans-serif;
   background-color: $background;
-}
-
-h1 {
-  color: $h1-color;
- /* color: #62412e;*/
+  h1 {
+    color: $h1-color;
+    font-size: 24px;
+    font-weight: bold;
+  /* color: #62412e;*/
+  }
 }
 
 .button {
   text-align: center; 
-  position:relative;
+  position: fixed;
+  margin-top: auto;
+  margin-bottom: auto;
+  @include experimental-value(top, calc(50% - 34px));
+  @include experimental-value(left, calc(50% - 80px));
   margin: auto;
   width: 10%;
-  font: 18px 'Arial';
+  font: 'Arial';
   color: white;
   padding: 10px;
   text-decoration: none;
+  overflow: hidden;
   @include border-radius(10px); 
   @include box-shadow(0px 2px 3px $shadow);
   @include text-shadow(0px 1px 3px  $shadow);
@@ -36,6 +40,7 @@ h1 {
   width: 184px;
   height: 209px;
   background-color: white;
+  margin: 20px;
   padding-top: 10px;
   font: 14px 'Arial';
   font-weight: bold;
